--- a/package.json
+++ b/package.json
@@ -9,8 +9,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.3",
+    "codelyzer": "^5.2.1",
     "express": "^4.17.1",
     "mongoose": "^5.9.3",
     "nodemon": "^2.0.2"
+  },
+  "devDependencies": {
+    "@types/mongodb": "^3.5.2",
+    "@types/mongoose": "^5.7.3",
+    "tslint": "^6.0.0",
+    "typescript": "^3.8.3"
   }
 }
