--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.3",
+    "body-parser": "^1.19.0",
     "codelyzer": "^5.2.1",
     "express": "^4.17.1",
     "mongoose": "^5.9.3",
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@types/mongodb": "^3.5.2",
     "@types/mongoose": "^5.7.3",
+    "ts-node": "^8.6.2",
     "tslint": "^6.0.0",
     "typescript": "^3.8.3"
   }
