--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "body-parser": "^1.19.0",
     "codelyzer": "^5.2.1",
     "express": "^4.17.1",
-    "mongoose": "^5.9.3",
-    "nodemon": "^2.0.2"
+    "express-async-handler": "^1.1.4",
+    "mongoose": "^5.9.3"
   },
   "devDependencies": {
     "@types/mongodb": "^3.5.2",
     "@types/mongoose": "^5.7.3",
+    "nodemon": "^2.0.2",
     "ts-node": "^8.6.2",
     "tslint": "^6.0.0",
     "typescript": "^3.8.3"
